<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrpt_apps</name>
  <!-- Before updating version number, read [MRPT_ROOT]/version_prefix.txt first -->
  <version>2.14.5</version>
  <description>Mobile Robot Programming Toolkit (MRPT) applications</description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license>BSD</license>

  <url type="website">https://www.mrpt.org/</url>
  <url type="bugtracker">https://github.com/MRPT/mrpt/issues</url>

  <author email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</author>

  <!-- Deps required by user code (they are in public headers or built as ROS (vs system) packages -->
  <depend>mrpt_libapps</depend>
  <depend>mrpt_libnav</depend>

  <!-- COMMON DEPS: This ensures we have ROS_DISTRO, etc. env vars -->
  <build_depend>ros_environment</build_depend>

  <!-- Deps required by building only -->
  <!-- <build_depend condition="$ROS_VERSION == 2">libfyaml-dev</build_depend> -->  <!-- Removed since not packaged for non-Debian platforms -->
  <build_depend>pkg-config</build_depend>
  <build_depend>zlib</build_depend>

  <!-- More build deps that are not actually required by this ROS package, but we need them for the mrpt/config.h to reflect we have such feature -->
  <build_depend>libjpeg</build_depend>  <!-- To ensure no built-in version is used -->
  <build_depend>glut</build_depend>
  <build_depend>libglfw3-dev</build_depend>
  <build_depend>libxrandr</build_depend>
  <build_depend>libxxf86vm</build_depend>
  <build_depend>opengl</build_depend>
  <build_depend>assimp-dev</build_depend>
  <build_depend>ffmpeg</build_depend>
  <build_depend>libfreenect-dev</build_depend>
  <build_depend>libopenni2-dev</build_depend>
  <build_depend>libpcap</build_depend>
  <build_depend>libudev-dev</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>pybind11-dev</build_depend>
  <build_depend>python3-pip</build_depend>
  <build_depend>tinyxml2</build_depend>
  <build_depend>wx-common</build_depend>
  <build_depend>wxwidgets</build_depend>

  <!--  <build_depend>libqt5-opengl-dev</build_depend> -->
  <!--  <build_depend>qtbase5-dev</build_depend> -->

  <!-- Required for cmake scripts to find ament_cmake and then realize we are in ROS 2, not ROS 1 -->
  <build_depend condition="$ROS_VERSION == 2">ament_cmake</build_depend>

  <!-- for rosbag2rawlog (ROS 1 only, ROS 2 version lives in the mrpt_libnavigation repository) -->
  <build_depend condition="$ROS_VERSION == 1">tf2_geometry_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">rosbag_storage</build_depend>
  <build_depend condition="$ROS_VERSION == 1">roscpp</build_depend>
  <depend condition="$ROS_VERSION == 1">mrpt_libros_bridge</depend>

  <!-- Deps for cmake to realize we have ROS1 -->
  <build_depend condition="$ROS_VERSION == 1">cv_bridge</build_depend>
  <build_depend condition="$ROS_VERSION == 1">nav_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">sensor_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">geometry_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">std_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">stereo_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">tf2</build_depend>
  <build_depend condition="$ROS_VERSION == 1">roscpp</build_depend>

  <doc_depend>doxygen</doc_depend>

  <!-- Minimum entries to release non-catkin pkgs: -->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
    <rosdoc config="doc/rosdoc.yaml" />
  </export>
  <!-- End -->

</package>
